# flip7

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
flip7/: config.py
flip7/agents/: base.py  ppo_agent.py  q_agent.py  random_agent.py
flip7/engine/: deck.py  game.py  player.py
flip7/environments/: gym_env.py
flip7/training/: export_onnx.py  train_ppo.py  train_q.py
models/: normalize_stats.json  ppo_best_vecnorm.pkl  ppo_flip7.onnx  q_table.pkl  vec_normalize_final.pkl
tests/: test_deck.py  test_game.py
webapp/: README.md  package-lock.json  package.json  vite.config.ts
webapp/src/lib/: gameEngine.ts  onnxAgent.ts  qAgent.ts
webapp/src/routes/: +page.svelte
webapp/static/: normalize_stats.json  ppo_flip7.onnx  q_table.json
